--- a/profile.html
+++ b/profile.html
@@ -2,38 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vivek Maheshwari | Web Developer</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>
-   
-    .animate-popup {
-      animation: pop 0.3s ease-out;
-    }
-    @keyframes pop {
-      0% {
-        transform: scale(0.95);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body class="bg-gradient-to-tr from-indigo-50 to-blue-100 min-h-screen font-sans">
 
 <!-- Profile Card -->
-<div class="max-w-4xl mx-auto mt-10 bg-white shadow-2xl rounded-2xl overflow-hidden">
+<div class="max-w-4xl mx-auto mt-10 bg-white shadow-2xl rounded-2xl overflow-hidden relative">
+  <!-- Edit Button -->
+  <button onclick="openModal()" class="absolute top-4 right-4 text-gray-600 hover:text-indigo-600">
+    <i class="fas fa-pen-to-square text-xl"></i>
+  </button>
+
   <div class="p-6 sm:flex sm:items-center">
-    <div class="w-32 h-32 mx-auto sm:mx-0 sm:mr-6 relative group">
-      <img src="https://i.pravatar.cc/150?img=32" alt="Vivek Maheshwari" class="w-32 h-32 rounded-full border-4 border-blue-600 object-cover shadow-md" />
+    <div class="w-32 h-32 mx-auto sm:mx-0 sm:mr-6 relative">
+      <img src="https://i.pravatar.cc/150?img=32" alt="Vivek Maheshwari" class="w-32 h-32 rounded-full border-4 border-blue-600 object-cover shadow-md"/>
     </div>
     <div class="text-center sm:text-left mt-4 sm:mt-0">
-      <h2 class="text-3xl font-bold text-gray-800">Vivek Maheshwari</h2>
-      <p class="text-lg text-indigo-600 font-medium">Web Developer</p>
+      <h2 id="userName" class="text-3xl font-bold text-gray-800">Vivek Maheshwari</h2>
+      <p id="userTitle" class="text-lg text-indigo-600 font-medium">Web Developer</p>
       <div class="flex justify-center sm:justify-start mt-3 space-x-2">
         <span class="bg-green-100 text-green-800 px-2 py-1 rounded text-xs font-medium">
           <i class="fas fa-star mr-1"></i> Member
@@ -45,28 +34,23 @@
     </div>
   </div>
 
-  <hr class="my-4 border-gray-200" />
+  <hr class="my-4 border-gray-200"/>
 
   <div class="px-6 pb-6 grid grid-cols-1 sm:grid-cols-2 gap-6">
     <div>
-      <h3 class="text-lg font-semibold text-gray-700 mb-3 flex items-center">
-        <i class="fas fa-code mr-2 text-indigo-500"></i> Skills
-      </h3>
-      <div class="flex flex-wrap">
-        <span class="skill-tag"><i class="fab fa-html5 mr-2"></i> HTML</span>
-        <span class="skill-tag"><i class="fab fa-css3-alt mr-2"></i> CSS</span>
-        <span class="skill-tag"><i class="fab fa-js-square mr-2"></i> JavaScript</span>
-        <span class="skill-tag"><i class="fab fa-react mr-2"></i> React</span>
-        <span class="skill-tag"><i class="fab fa-node-js mr-2"></i> Node.js</span>
-        <span class="skill-tag"><i class="fas fa-database mr-2"></i> MongoDB</span>
-        <span class="skill-tag"><i class="fab fa-github mr-2"></i> GitHub</span>
+      <h3 class="text-lg font-semibold text-gray-700 mb-3"><i class="fas fa-code mr-2 text-indigo-500"></i>Skills</h3>
+      <div id="skillsList" class="flex flex-wrap gap-2">
+        <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm flex items-center"><i class="fab fa-html5 mr-2"></i>HTML</span>
+        <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm flex items-center"><i class="fab fa-css3-alt mr-2"></i>CSS</span>
+        <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm flex items-center"><i class="fab fa-js mr-2"></i>JavaScript</span>
+        <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm flex items-center"><i class="fab fa-react mr-2"></i>React</span>
+        <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm flex items-center"><i class="fab fa-node-js mr-2"></i>Node.js</span>
+        <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm flex items-center"><i class="fas fa-database mr-2"></i>MongoDB</span>
       </div>
     </div>
 
     <div>
-      <h3 class="text-lg font-semibold text-gray-700 mb-3 flex items-center">
-        <i class="fas fa-chart-line mr-2 text-indigo-500"></i> Stats
-      </h3>
+      <h3 class="text-lg font-semibold text-gray-700 mb-3"><i class="fas fa-chart-line mr-2 text-indigo-500"></i>Stats</h3>
       <ul class="space-y-3">
         <li class="flex items-center"><i class="fas fa-calendar-alt mr-3 text-gray-500 w-5"></i><strong class="w-24">Joined:</strong> Apr 2025</li>
         <li class="flex items-center"><i class="fas fa-code-branch mr-3 text-gray-500 w-5"></i><strong class="w-24">Path:</strong> Web Dev</li>
@@ -74,8 +58,10 @@
           <i class="fas fa-tasks mr-3 text-gray-500 w-5"></i>
           <strong class="w-24">Progress:</strong>
           <div class="flex-1 ml-2">
-            <div class="progress-bar"><div class="progress-fill" style="width: 50%"></div></div>
-            <span class="text-xs text-gray-600">5/10 modules completed</span>
+            <div class="w-full h-3 bg-gray-200 rounded-full overflow-hidden">
+              <div id="progressBar" class="bg-blue-500 h-3" style="width: 50%"></div>
+            </div>
+            <span id="progressText" class="text-xs text-gray-600">5/10 modules completed</span>
           </div>
         </li>
       </ul>
@@ -83,28 +69,95 @@
   </div>
 
   <div class="px-6 pb-6">
-    <h3 class="text-lg font-semibold text-gray-700 mb-3 flex items-center">
-      <i class="fas fa-share-alt mr-2 text-indigo-500"></i> Connect With Me
-    </h3>
+    <h3 class="text-lg font-semibold text-gray-700 mb-3"><i class="fas fa-share-alt mr-2 text-indigo-500"></i>Connect With Me</h3>
     <ul class="space-y-2">
-      <li>
-        <a href="https://www.linkedin.com/in/vivekmaheshwari" target="_blank" class="flex items-center text-blue-700 hover:text-blue-900">
-          <i class="fab fa-linkedin mr-3 w-5 text-blue-600"></i> linkedin.com/in/vivekmaheshwari
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/vivekmaheshwari" target="_blank" class="flex items-center text-gray-800 hover:text-black">
-          <i class="fab fa-github mr-3 w-5"></i> github.com/vivekmaheshwari
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/vivekmahesh_" target="_blank" class="flex items-center text-blue-400 hover:text-blue-500">
-          <i class="fab fa-twitter mr-3 w-5"></i> twitter.com/vivekmahesh_
-        </a>
-      </li>
+      <li><a href="https://linkedin.com/in/vivekmaheshwari" target="_blank" class="flex items-center text-blue-700 hover:text-blue-900"><i class="fab fa-linkedin mr-3 w-5"></i> linkedin.com/in/vivekmaheshwari</a></li>
+      <li><a href="https://github.com/vivekmaheshwari" target="_blank" class="flex items-center text-gray-800 hover:text-black"><i class="fab fa-github mr-3 w-5"></i> github.com/vivekmaheshwari</a></li>
+      <li><a href="https://twitter.com/vivekmahesh_" target="blank" class="flex items-center text-blue-400 hover:text-blue-500"><i class="fab fa-twitter mr-3 w-5"></i> twitter.com/vivekmahesh</a></li>
     </ul>
   </div>
+
+  <div class="px-6 pb-8">
+    <h3 class="text-lg font-semibold text-gray-700 mb-3"><i class="fas fa-file-upload mr-2 text-indigo-500"></i>Upload Resume</h3>
+    <input type="file" class="block w-full text-sm text-gray-700 file:mr-4 file:py-2 file:px-4 file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100" />
+  </div>
 </div>
+
+<!-- Modal for Editing -->
+<div id="editModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden">
+  <div class="bg-white w-96 p-6 rounded-xl shadow-lg space-y-4">
+    <h2 class="text-xl font-semibold text-gray-800">Edit Profile</h2>
+    <input type="text" id="editName" class="w-full border border-gray-300 rounded px-3 py-2" placeholder="Name"/>
+    <input type="text" id="editTitle" class="w-full border border-gray-300 rounded px-3 py-2" placeholder="Title"/>
+    <input type="number" id="editProgress" class="w-full border border-gray-300 rounded px-3 py-2" placeholder="Modules Completed (0-10)" min="0" max="10"/>
+    
+    <!-- Skills Editing -->
+    <div>
+      <h3 class="text-lg font-semibold text-gray-700 mb-2">Edit Skills</h3>
+      <input type="text" id="editSkills" class="w-full border border-gray-300 rounded px-3 py-2" placeholder="Enter skills (comma separated)" />
+    </div>
+
+    <div class="flex justify-end gap-2 mt-4">
+      <button onclick="closeModal()" class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300">Cancel</button>
+      <button onclick="saveChanges()" class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Save</button>
+    </div>
+  </div>
+</div>
+
+<!-- JavaScript -->
+<script>
+  function openModal() {
+    document.getElementById("editModal").classList.remove("hidden");
+    document.getElementById("editName").value = document.getElementById("userName").innerText;
+    document.getElementById("editTitle").value = document.getElementById("userTitle").innerText;
+    const currentText = document.getElementById("progressText").innerText;
+    document.getElementById("editProgress").value = parseInt(currentText.split("/")[0]);
+
+    // Populate existing skills
+    let currentSkills = [];
+    document.querySelectorAll('#skillsList span').forEach(skill => {
+      currentSkills.push(skill.innerText.trim());
+    });
+    document.getElementById("editSkills").value = currentSkills.join(', ');
+  }
+
+  function closeModal() {
+    document.getElementById("editModal").classList.add("hidden");
+  }
+
+  function saveChanges() {
+    const newName = document.getElementById("editName").value;
+    const newTitle = document.getElementById("editTitle").value;
+    const newProgress = Math.min(10, Math.max(0, parseInt(document.getElementById("editProgress").value)));
+    const newSkills = document.getElementById("editSkills").value.split(',').map(skill => skill.trim()).filter(skill => skill.length > 0);
+
+    document.getElementById("userName").innerText = newName;
+    document.getElementById("userTitle").innerText = newTitle;
+    document.getElementById("progressBar").style.width = (newProgress * 10) + "%";
+    document.getElementById("progressText").innerText = `${newProgress}/10 modules completed`;
+
+    const faIcons = {
+      html: "html5",
+      css: "css3-alt",
+      javascript: "js",
+      react: "react",
+      "node.js": "node-js",
+      mongodb: "database"
+    };
+
+    let skillsList = document.getElementById("skillsList");
+    skillsList.innerHTML = '';
+    newSkills.forEach(skill => {
+      const skillSpan = document.createElement("span");
+      skillSpan.classList.add("bg-blue-100", "text-blue-800", "px-3", "py-1", "rounded-full", "text-sm", "flex", "items-center");
+      const icon = faIcons[skill.toLowerCase()] || "code";
+      skillSpan.innerHTML = `<i class="fas fa-${icon} mr-2"></i>${skill}`;
+      skillsList.appendChild(skillSpan);
+    });
+
+    closeModal();
+  }
+</script>
 
 </body>
 </html>
