--- a/dashbord.html
+++ b/dashbord.html
@@ -15,7 +15,7 @@
   <aside class="w-full md:w-64 bg-white border-r shadow-lg flex-shrink-0">
     <div class="text-blue-700 text-2xl font-bold p-6">NEXT ROLE</div>
     <nav class="flex flex-col space-y-3 px-4">
-      <a href="dashboard.html" class="flex items-center text-blue-600 font-semibold p-2 rounded-lg bg-blue-100">
+      <a href="dashbord.html" class="flex items-center text-blue-600 font-semibold p-2 rounded-lg bg-blue-100">
         <i data-lucide="layout-dashboard" class="w-5 h-5 mr-2"></i> Dashboard
       </a>
       <a href="skills.html" class="flex items-center text-gray-700 hover:text-blue-600 p-2 rounded-lg hover:bg-blue-50">
