--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
     <h1 class="text-2xl font-bold text-blue-700">NEXT ROLE</h1>
     <nav>
       <a href="index.html" class="text-blue-600 hover:underline font-medium mx-2">Home</a>
-      <a href="dashboard.html" class="text-blue-600 hover:underline font-medium mx-2">Dashboard</a>
+      <a href="dashbord.html" class="text-blue-600 hover:underline font-medium mx-2">Dashboard</a>
       <a href="profile.html" class="text-blue-600 hover:underline font-medium mx-2">Profile</a>
     </nav>
   </header>
